<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/detailsImg"
            android:layout_width="94dp"
            android:layout_height="115dp"
            android:layout_marginStart="24dp"
            android:padding="16dp"
            android:src="@drawable/x_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/positionHeadlineTextView"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="12dp"
            android:text="@string/position"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsImg" />

        <TextView
            android:id="@+id/positionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="12dp"
            android:text="@string/position_text_position_text_position_text_position_text_position_text_position_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positionHeadlineTextView" />

        <TextView
            android:id="@+id/locationHeadlineTextView"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="12dp"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positionTextView" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="12dp"
            android:text="@string/locationText"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationHeadlineTextView" />

        <TextView
            android:id="@+id/descriptionHeadlineTextView"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="12dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="12dp"
            android:text="@string/descriptionText"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionHeadlineTextView" />

        <TextView
            android:id="@+id/contactHeadlineTextView"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="12dp"
            android:text="@string/contact"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="12dp"
            android:text="@string/office_smartjobfinder_at"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactHeadlineTextView" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>